tests/error/typedef_func_tmpl_types2.gw
#! [contains] pre-defined types
funptr void t_ptr:[A]();
typedef t_ptr:[int] B;

fun void test:[A]() {
  <<< __func__ >>>;
}

test @=> var B b;
<<< b() >>>;
<<< b:[float]() >>>;
